# aq

./: Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml
examples/: gen_fixtures.rs
src/: cli.rs  convert.rs  detect.rs  engine.rs  error.rs  main.rs
src/output/: arrow_out.rs  csv_out.rs  json.rs  mod.rs  table.rs
src/reader/: arrow_ipc.rs  csv.rs  mod.rs  ndjson.rs  parquet.rs
tests/: integration.rs
tests/fixtures/: complex.arrow  complex.ndjson  complex.parquet  sample.arrow  sample.csv  sample.ndjson  sample.parquet
