[package]
name = "aq"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "aq"
path = "src/main.rs"

[dependencies]
# Arrow ecosystem
arrow = { version = "54", features = ["json", "csv", "ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }

# jq engine (pre-release but the only self-contained option)
jaq-core = "3.0.0-gamma"
jaq-json = "2.0.0-gamma"
jaq-std = { version = "3.0.0-gamma", default-features = false, features = ["std", "math"] }

# CLI
clap = { version = "4", default-features = false, features = ["derive", "help", "usage", "error-context", "suggestions", "std"] }

# Output
comfy-table = "7"
is-terminal = "0.4"

# Error handling + serialization
anyhow = "1"
thiserror = "2"
serde_json = "1"
bytes = "1"

[profile.release]
lto = true           # cross-crate inlining + dead-code elimination
codegen-units = 1    # single CGU lets LLVM see the whole program
strip = "symbols"    # remove symbol table (keeps panic messages)
panic = "abort"      # no unwinding machinery
opt-level = "z"      # optimize for size (CLI is I/O-bound, not CPU-bound)
